// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-query-selector dumpTree should handle foreardRef 1`] = `
Array [
  "<html>
  <body>
    <div>
      <Root>
        <span>
          <MyComponent>
            <div>
              <Functional>
                <div/>
                <div/>
                <aside/>
                <p/>
                <span/>

              </Functional>
              <Text/>

            </div>

          </MyComponent>
          <MyComponent>
            <div>
              <Functional>
                <div/>
                <div/>
                <aside/>
                <p/>
                <span/>

              </Functional>
              <Text/>

            </div>

          </MyComponent>
          <ForwardRef>
            <div/>

          </ForwardRef>

        </span>

      </Root>

    </div>

  </body>

</html>
",
]
`;

exports[`react-query-selector dumpTree should handle fragments 1`] = `
Array [
  "<html>
  <body>
    <div>
      <Root>
        <span>
          <MyComponent>
            <div>
              <Functional>
                <div/>
                <div/>
                <aside/>
                <p/>
                <span/>

              </Functional>
              <Text/>

            </div>

          </MyComponent>
          <MyComponent>
            <div>
              <Functional>
                <div/>
                <div/>
                <aside/>
                <p/>
                <span/>

              </Functional>
              <Text/>

            </div>

          </MyComponent>
          <Fragment>
            <div/>
            <div/>

          </Fragment>

        </span>

      </Root>

    </div>

  </body>

</html>
",
]
`;

exports[`react-query-selector generatePath should provide path for anonymous elements 1`] = `"p"`;

exports[`react-query-selector generatePath should provide path for named elements 1`] = `"<App> p"`;

exports[`react-query-selector generatePath should provide path for nested elements 1`] = `"<Functional> p"`;

exports[`react-query-selector generatePath should provide path for nested elements 2`] = `"<Functional> aside[key=\\"2\\"]"`;

exports[`react-query-selector generatePath should provide unique path for multiple elements 1`] = `"<MyComponent>:nth-of-type(1) <Functional> p"`;

exports[`react-query-selector generatePath should provide unique path for multiple elements 2`] = `"<MyComponent>:nth-of-type(1) <Functional> aside[key=\\"2\\"]"`;

exports[`react-query-selector generatePath should provide unique path from key 1`] = `"<MyComponent>[key=\\"1\\"]"`;

exports[`react-query-selector querySelectorAll should support attributes on lazy + suspense elements 1`] = `
Array [
  "<html>
  <body>
    <div>
      <Root>
        <span>
          <MySuspense>
            <Suspense>
              <Fragment>
                <Lazy/>

              </Fragment>
              <Fragment>
                <aside/>

              </Fragment>

            </Suspense>

          </MySuspense>
          <MySuspense>
            <Suspense>
              <Fragment>
                <Lazy/>

              </Fragment>
              <Fragment>
                <aside/>

              </Fragment>

            </Suspense>

          </MySuspense>

        </span>

      </Root>

    </div>

  </body>

</html>
",
]
`;

exports[`react-query-selector querySelectorAll should support attributes on lazy + suspense elements 2`] = `
Array [
  "<html>
  <body>
    <div>
      <Root>
        <span>
          <MySuspense>
            <Suspense>
              <default>
                <nav/>

              </default>

            </Suspense>

          </MySuspense>
          <MySuspense>
            <Suspense>
              <default>
                <nav/>

              </default>

            </Suspense>

          </MySuspense>

        </span>

      </Root>

    </div>

  </body>

</html>
",
]
`;

exports[`react-query-selector querySelectorAll should support attributes on memo elements 1`] = `
Array [
  "<html>
  <body>
    <div>
      <Root>
        <span>
          <MyFunction>
            <Text/>

          </MyFunction>
          <MyFunction>
            <Text/>

          </MyFunction>

        </span>

      </Root>

    </div>

  </body>

</html>
",
]
`;
